--- a/README.adoc
+++ b/README.adoc
@@ -25,7 +25,7 @@ Because this script makes so many use-case assumptions, there are no plans to ve
 This script was written with the Windows OS in mind although it should work on other operating systems. All dependencies should be listed in the main link:_Check_Dependencies.bat[] which is generated from link:install\dependencies.popyaml[]. Additionally, a Python requirements file is available at link:install\requirements.txt[].
 
 == Install
-This script is intended to be used as a command line utility. The current recommended installation method on Windows is to create a file named `picnote.bat` in a directory that is on the PATH. Edit the file to include:
+This script is intended to be used as a command line utility. The current recommended installation method on Windows is to create a file named `picnotes.bat` in a directory that is on the PATH. Edit the file to include:
 
   @python <PATH_TO_PICNOTES_PY> %*
 
